# f1_2026_predictions

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  Dockerfile  Makefile  README.md  RELEASES.md  ROADMAP.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  trigger.config.ts
.agents/skills/data-science-expert/: SKILL.md
.agents/skills/data-science-expert/references/: Model selection Image Reference.md  data_formats.md  eda_templates.md  etl_patterns.md  ml_evaluation.md  statistics_reference.md
.agents/skills/web-devops/: SKILL.md
.agents/skills/web-devops/references/: docker-kubernetes.md  git-versioning.md  github-actions.md  security.md
.github/workflows/: ai_summarizer.yml  ci.yml  docker.yml  scheduled_sync.yml  update_f1_data.yml
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/src/components/: PredictionsTable.tsx  RaceReport.tsx  RaceSelector.tsx  RaceTimeline.tsx  TyreIntelligence.tsx  ViewToggle.tsx
dashboard/src/pages/: index.tsx
dashboard/src/pages/race/: [round].tsx
dashboard/src/styles/: globals.css
dashboard/src/utils/: fileReader.ts
data/outputs/models/: xgb_pace_model.joblib
notebooks/: 01_eda_and_modeling_v1.ipynb
reports/: metrics.json
reports/2024/Abu_Dhabi_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Australian_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Austrian_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Azerbaijan_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Bahrain_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Belgian_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/British_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Canadian_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Chinese_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Dutch_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Emilia_Romagna_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Hungarian_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Italian_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Japanese_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Las_Vegas_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Mexico_City_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Miami_Grand_Prix/results/: REPORTE_Miami_Grand_Prix_2024.html  actual_results_round_6.json  metrics.json  predictions.csv  residual_analysis.csv  shap_metadata.json  standings.csv
reports/2024/Monaco_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Qatar_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Saudi_Arabian_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Singapore_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/Spanish_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/São_Paulo_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/United_States_Grand_Prix/results/: predictions.csv  standings.csv
reports/2024/predictions/: predictions_summary_2024.json  standings_lgb_2024.csv  standings_xgb_2024.csv
reports/2024/summaries/: lap_positions_round_6.json  predicted_lap_positions_round_6.json  predicted_report_round_6.md  predicted_tyre_intelligence_round_6.json  tyre_intelligence_round_6.json
reports/2026/Australian_Grand_Prix/results/: predictions.csv  standings.csv
reports/2026/Canadian_Grand_Prix/results/: predicted_lap_positions_round_5.json  predicted_report_round_5.md  (+1 more)
reports/2026/predictions/: predictions_summary_2026.json  standings_lgb_2026.csv  standings_xgb_2026.csv
reports/2026/summaries/: actual_results_round_4.json  lap_positions_round_4.json  predicted_lap_positions_round_4.json  predicted_report_round_4.md  predicted_tyre_intelligence_round_4.json  report_round_4.md  tyre_intelligence_round_4.json
reports/predictions/: predictions_summary_2024.json  predictions_summary_2026.json
scratch/: check_2026_data.py  check_models.py  generate_notebook.py  test_mypy_pandera.py
scripts/: analyze_residuals.py  extract_lap_positions.py  extract_quali_features.py  generate_ai_summary.py  generate_predicted_timeline.py  generate_reports.py  ingest_season.py  master_pipeline.py  miami_preview.py  predict_season.py  simulate_miami.py  simulate_race.py  visualize_results.py
src/f1_predictions/: __init__.py
src/f1_predictions/api/: main.py
src/f1_predictions/cleaning/: __init__.py  imputer.py  normalizer.py  outlier_filter.py  pipeline.py
src/f1_predictions/evaluation/: post_race_verdict.py
src/f1_predictions/features/: encoding.py  era_normalization.py  historical_performance.py  pipeline.py  reliability.py  rolling_pace.py  track_evolution.py  tyre_degradation.py  weather.py
src/f1_predictions/ingestion/: __init__.py  fastf1_client.py  parquet_writer.py  schemas.py  session_loader.py
src/f1_predictions/modeling/: tuning.py
src/f1_predictions/models/: __init__.py  base.py  common.py  explainability.py  lightgbm_pipeline.py  stacking_pipeline.py  xgboost_pipeline.py
src/f1_predictions/templates/: race_briefing.html.j2  report.html.j2
src/f1_predictions/utils/: __init__.py  analysis.py  chart_exporter.py  config.py  email_builder.py  logging_setup.py  notifications.py  profiling.py  race_detector.py
src/trigger/: f1_tasks.ts
tests/: conftest.py
tests/features/: test_encoding.py  test_era_normalization.py  test_historical_performance.py  test_reliability.py  test_rolling_pace.py  test_track_evolution.py  test_tyre_degradation.py  test_weather.py
tests/models/: test_common.py  test_explainability.py  test_pace_regressors.py
tests/scripts/: test_master_pipeline_ai.py
tests/unit/: test_cleaning.py  test_imputer_edge_cases.py  test_ingestion.py  test_utils.py
tests/utils/: test_email_builder.py  test_notifications.py  test_race_detector.py
(+19 files in other folders)
